--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <title>Sanvi Agarwal</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-   <center>
-    <ul class="menu">
+    <center>
+        <ul class="menu">
             <li class="links"><a href="#welcome">Home</a></li>
             <li class="links"><a href="#apps">My Apps</a></li>
             <li class="links"><a href="#games">My Games</a></li>
             <li class="links"><a href="#chatbot">My ChatBot</a></li>
             <li class="links"><a href="#contact">Contact</a></li>
         </ul>
-    </center> 
+    </center>
     <section id="welcome">
         <div class="parallax-inner">
             <img src="My%20photo.jpg" class="profile" />
@@ -27,21 +30,45 @@
     <section id="bio">
         <h1>Hi!</h1>
         <div class="line"></div>
-        <p>I am Sanvi Agarwal.I live in Tinsukia,Assam.I am 10 Years old.I study in Assam Heights Public School.I am in standard VI.My Hobbies are dancing , singing , drawing , learning  , coding etc.I love to play a lot. </p>
+        <p>I am Sanvi Agarwal.I live in Tinsukia,Assam.I am 10 Years old.I study in Assam Heights Public School.I am in standard VI.My Hobbies are dancing , singing , drawing , learning , coding etc.I love to play a lot. </p>
     </section>
-
-    <section id="apps">
-        <h1>My Apps</h1>
-        <div class="line"></div>
-        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/0--USR9rX1QEFrI82vDvj5aEo_XIJdsm6rseNfXmT4w/embed?nosource"></iframe>
-        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/qXWXmCyNvnHzE123hkf1aOUo5XUYOB3BiJZkeoGA1Md/embed?nosource"></iframe>
-    </section>
-
+    <div class="container">
+        <section id="apps">
+            <h1>My Apps</h1>
+            <div class="line"></div>
+            <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/0--USR9rX1QEFrI82vDvj5aEo_XIJdsm6rseNfXmT4w/embed?nosource"></iframe>
+            <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/qXWXmCyNvnHzE123hkf1aOUo5XUYOB3BiJZkeoGA1Md/embed?nosource"></iframe>
+        </section>
+    </div>
     <section id="games">
         <h1>My Games</h1>
         <div class="line"></div>
-        <a href="https://studio.code.org/projects/playlab/lhUNc9z7zI7JGpL5gHmAEpa8Nk85kHiXuZaKB5bNaN8" target="_blank"><img src="Hungry%20birds%20and%20pies.png"></a>
-        <a href="https://studio.code.org/projects/spritelab/sHvEto5ckEWP14Jb3wNDgWmQ7SUxicXpt66uc2iEdg4" target="_blank"><img src="Tank%20fight.png"></a>
+        <div id="mycarousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="item active">
+                    <center>
+                        <a href="https://studio.code.org/projects/playlab/lhUNc9z7zI7JGpL5gHmAEpa8Nk85kHiXuZaKB5bNaN8" target="_blank"><img src="Hungry%20birds%20and%20pies.png"></a>
+                        <div class="carousel-content">
+                            <p>Hungry Birds And Pies</p>
+                        </div>
+                    </center>
+                </div>
+                <div class="item">
+                    <center>
+                        <a href="https://studio.code.org/projects/spritelab/sHvEto5ckEWP14Jb3wNDgWmQ7SUxicXpt66uc2iEdg4" target="_blank"><img src="Tank%20fight.png"></a>
+                        <div class="carousel-content">
+                            <p>Hungry Birds And Pies</p>
+                        </div>
+                    </center>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#mycarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#mycarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
     </section>
 
     <section id="chatbot">
@@ -55,8 +82,8 @@
         <div class="line"></div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15255346.488683898!2d70.10006853788067!3d21.01467997627619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b745d5b7c4bd%3A0xde2f38d642ffaf23!2sWhiteHatJr%20Mumbai!5e0!3m2!1sen!2sin!4v1622705064425!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <div class="contact_1">
-        <a href="mailto:sanviagarwaltsk@gmail.com?Subject=Hello">
-          <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>sanviagarwaltsk@gmail.com</h3>
+            <a href="mailto:sanviagarwaltsk@gmail.com?Subject=Hello">
+                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>sanviagarwaltsk@gmail.com</h3>
             </a>
         </div>
     </section>
