--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 </head>
 
 <body>
-    <center>
-        <ul class="menu">
-            <li class="links"><a href="#welcome">Home</a></li>
-            <li class="links"><a href="#apps">My Apps</a></li>
-            <li class="links"><a href="#games">My Games</a></li>
-            <li class="links"><a href="#chatbot">My ChatBot</a></li>
-            <li class="links"><a href="#contact">Contact</a></li>
-        </ul>
-    </center>
+    <nav class="navbar-inverse my_nav_bar">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">SANVI AGARWAL</a>
+        </div>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="nav navbar-nav">
+                <li class="links"><a href="#welcome">Home</a></li>
+                <li class="links"><a href="#apps">My Apps</a></li>
+                <li class="links"><a href="#games">My Games</a></li>
+                <li class="links"><a href="#chatbot">My ChatBot</a></li>
+                <li class="links"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <section id="welcome">
         <div class="parallax-inner">
             <img src="My%20photo.jpg" class="profile" />
@@ -87,6 +97,7 @@
             </a>
         </div>
     </section>
+    <script async src="https://drv.tw/inc/wd.js"></script>
 </body>
 
 </html>
